# Velt

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  IMGUI_DATA_FLOW.md  IMGUI_RENDERING_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  Lumen.sln  README.md  VeltProfile-Shutdown.json  compile_shaders.bat  imgui.ini
.github/workflows/: cmake-multi-platform.yml
Assets/Models/: error.glb
Assets/Shader/: basic_fragment_shader.hlsl  basic_vertex_shader.hlsl  deffered_pbr_pixel.hlsl  deffered_pbr_vertex.hlsl  gbuffer_pixel.hlsl  gbuffer_vertex.hlsl
Lavendel/: CMakeLists.txt  Lavendel.vcxproj  Lumen.vcxproj.filters
Lavendel-Editor/: CMakeLists.txt
Lavendel-Editor/src/: EditorApp.cpp
Lavendel-Editor/src/EditorLayer/: EditorLayer.cpp  EditorLayer.h
Lavendel/src/: Lavendel.h  lvpch.cpp  lvpch.h
Lavendel/src/Lavendel/: Application.cpp  Application.h  Base.h  Core.h  Entrypoint.h  Lavendel.h  Log.cpp  Log.h
Lavendel/src/Lavendel/Core/: Application.cpp  Application.h  Entrypoint.h  Log.cpp  Log.h  Window.cpp  Window.h
Lavendel/src/Lavendel/Core/Events/: KeyEvent.h  MouseEvent.h
Lavendel/src/Lavendel/Core/Layers/: Layer.cpp  Layer.h
Lavendel/src/Lavendel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Lavendel/src/Lavendel/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiRenderer.cpp  ImGuiRenderer.h
Lavendel/src/Lavendel/ImGui/Widgets/: DemoWidget.cpp  DemoWidget.h
Lavendel/src/Lavendel/Layers/: Layer.h  LayerStack.cpp  LayerStack.h
Lavendel/src/Lavendel/Log/: Log.cpp  Log.h
Lavendel/src/Lavendel/Plattform/Vulkan/: VulkanFramebuffer.h
Lavendel/src/Lavendel/Renderer/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
Lavendel/src/Lavendel/Renderer/Core/: Device.cpp  Device.h  Swapchain.cpp  Swapchain.h
Lavendel/src/Lavendel/Renderer/Model/: Model.cpp  Model.h
Lavendel/src/Lavendel/Renderer/Pipeline/: Pipeline.cpp  Pipeline.h
Lavendel/src/Lavendel/Renderer/Setup/: Device.cpp  Device.h  Pipeline.cpp  Pipeline.h
Lavendel/src/Lavendel/Utils/Profiling/: Instrumentor.h
Lumen/: Lumen.vcxproj  Lumen.vcxproj.filters
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Solution.cpp
Scripts/: CompileShaders.bat  compile_shaders.bat  compile_shaders.sh
Shaders/: fragment.glsl  fragment.glsl.spv  vertex.glsl  vertex.glsl.spv
Velt/: CMakeLists.txt  Velt.h
Velt-Editor/: CMakeLists.txt
Velt-Editor/src/: EditorApp.cpp
Velt-Editor/src/EditorLayer/: EditorLayer.cpp  EditorLayer.h
Velt/Plattform/: VulkanFramebuffer.h
Velt/src/: vtpch.h
Velt/src/Velt/: Application.cpp  Lavendel.h
Velt/src/Velt/Asset/: AssimpMeshImporter.cpp  AssimpMeshImporter.h
Velt/src/Velt/Core/: Application.cpp  Application.h  Assert.h  CVar.cpp  CVar.h  Core.h  Entrypoint.h  Input.cpp  Input.h  Instrumentor.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Math.h  Scancodes.h  Timestep.h  Window.h
Velt/src/Velt/Editor/: EditorCamera.cpp  EditorCamera.h  EditorGuizmo.h  EditorGuizmos.cpp  EditorGuizmos.h  EditorPanel.h
Velt/src/Velt/Editor/FontLibrary/: FontAwesomeIcons.h  FontLibrary.cpp  FontLibrary.h
Velt/src/Velt/Editor/Panels/: EditorSceneHierarchyPanel.cpp  EditorSceneHierarchyPanel.h  EditorViewportPanel.cpp  EditorViewportPanel.h
Velt/src/Velt/Events/: ApplicationEvent.h  ApplicationEvents.h  Event.cpp  Event.h  EventDispatcher.h  EventHandler.cpp  EventHandler.h  KeyEvent.h  KeyEvents.h  MouseEvent.h  MouseEvents.h
Velt/src/Velt/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  SceneViewport.cpp  SceneViewport.h
Velt/src/Velt/ImGui/Widgets/: DemoWidget.cpp  DemoWidget.h
Velt/src/Velt/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Velt/src/Velt/Platform/SDL/: SDLEventTranslator.h  SDLInput.cpp  SDLInput.h
Velt/src/Velt/Platform/Vulkan/: DescriptorLayoutCache.cpp  DescriptorLayoutCache.h  DescriptorSetManager.cpp  DescriptorSetManager.h  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGameObject.cpp  VulkanGameObject.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanModel.cpp  VulkanModel.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderAPI.cpp  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanResourceUploader.cpp  VulkanResourceUploader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Velt/src/Velt/Platform/Vulkan/Buffer/: VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Velt/src/Velt/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Velt/src/Velt/Plattform/Vulkan/: VulkanFramebuffer.cpp  VulkanFramebuffer.h
Velt/src/Velt/Renderer/: BindingLayouts.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DefferedRenderer.cpp  DefferedRenderer.h  Framebuffer.cpp  Framebuffer.h  GameObject.h  IndexBuffer.cpp  IndexBuffer.h  Lights.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthograpicCamera.cpp  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  RenderAPI.cpp  RenderAPI.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererAPI.h  SceneRenderer.cpp  SceneRenderer.h  Shader.h  (+13 more)
Velt/src/Velt/Renderer/Core/: Device.cpp  Device.h  Swapchain.cpp  Swapchain.h
Velt/src/Velt/Renderer/Model/: GameObject.cpp  GameObject.h  Model.cpp  Model.h
Velt/src/Velt/Renderer/Pipeline/: Pipeline.cpp  Pipeline.h
Velt/src/Velt/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
Velt/src/Velt/Utils/Profiling/: Instrumentor.h
VeltEditor/: CMakeLists.txt
VeltEditor/src/: Editor.cpp  EditorLayer.cpp  EditorLayer.h
shaders/: fragment.glsl  fragment.glsl.spv  shader.frag  shader.frag.frag.spv  shader.vert  vertex.glsl  vertex.glsl.spv
(+4 files in other folders)
